@@ -5,8 +5,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>485</width>
-    <height>515</height>
+    <width>460</width>
+    <height>482</height>
    </rect>
   </property>
   <layout class="QVBoxLayout" >
@@ -14,7 +14,7 @@
     <number>0</number>
    </property>
    <property name="spacing" >
-    <number>6</number>
+    <number>0</number>
    </property>
    <item>
     <widget class="QTabWidget" name="general_tab" >
@@ -84,14 +84,27 @@
          <property name="title" >
           <string>Output drivers</string>
          </property>
-         <layout class="QHBoxLayout" >
+         <layout class="QGridLayout" >
           <property name="margin" >
            <number>9</number>
           </property>
           <property name="spacing" >
            <number>6</number>
           </property>
-          <item>
+          <item row="1" column="0" >
+           <widget class="QLabel" name="ao_label" >
+            <property name="text" >
+             <string>&amp;Audio:</string>
+            </property>
+            <property name="wordWrap" >
+             <bool>false</bool>
+            </property>
+            <property name="buddy" >
+             <cstring>ao_combo</cstring>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="0" >
            <widget class="QLabel" name="vo_label" >
             <property name="text" >
              <string>V&amp;ideo:</string>
@@ -104,22 +117,43 @@
             </property>
            </widget>
           </item>
-          <item>
-           <widget class="MyComboBox" name="vo_combo" >
+          <item row="0" column="1" >
+           <widget class="QComboBox" name="vo_combo" >
             <property name="sizePolicy" >
              <sizepolicy>
-              <hsizetype>7</hsizetype>
+              <hsizetype>5</hsizetype>
               <vsizetype>0</vsizetype>
               <horstretch>0</horstretch>
               <verstretch>0</verstretch>
              </sizepolicy>
             </property>
             <property name="editable" >
-             <bool>true</bool>
+             <bool>false</bool>
             </property>
            </widget>
           </item>
-          <item>
+          <item row="1" column="1" >
+           <widget class="QComboBox" name="ao_combo" >
+            <property name="sizePolicy" >
+             <sizepolicy>
+              <hsizetype>5</hsizetype>
+              <vsizetype>0</vsizetype>
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="editable" >
+             <bool>false</bool>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="2" >
+           <widget class="QLineEdit" name="vo_user_defined_edit" />
+          </item>
+          <item row="1" column="2" >
+           <widget class="QLineEdit" name="ao_user_defined_edit" />
+          </item>
+          <item row="0" column="3" >
            <spacer>
             <property name="orientation" >
              <enum>Qt::Horizontal</enum>
@@ -135,33 +169,18 @@
             </property>
            </spacer>
           </item>
-          <item>
-           <widget class="QLabel" name="ao_label" >
-            <property name="text" >
-             <string>&amp;Audio:</string>
+          <item row="1" column="3" >
+           <spacer>
+            <property name="orientation" >
+             <enum>Qt::Horizontal</enum>
             </property>
-            <property name="wordWrap" >
-             <bool>false</bool>
+            <property name="sizeHint" >
+             <size>
+              <width>81</width>
+              <height>20</height>
+             </size>
             </property>
-            <property name="buddy" >
-             <cstring>ao_combo</cstring>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="MyComboBox" name="ao_combo" >
-            <property name="sizePolicy" >
-             <sizepolicy>
-              <hsizetype>7</hsizetype>
-              <vsizetype>0</vsizetype>
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
-            </property>
-            <property name="editable" >
-             <bool>true</bool>
-            </property>
-           </widget>
+           </spacer>
           </item>
          </layout>
         </widget>
@@ -988,11 +1007,6 @@ For translators: don't translate this text, it will be replaced with another one
  </widget>
  <customwidgets>
   <customwidget>
-   <class>MyComboBox</class>
-   <extends>QComboBox</extends>
-   <header>mycombobox.h</header>
-  </customwidget>
-  <customwidget>
    <class>FileChooser</class>
    <extends>QLineEdit</extends>
    <header>filechooser.h</header>
@@ -1008,7 +1022,9 @@ For translators: don't translate this text, it will be replaced with another one
   <tabstop>mplayerbin_edit</tabstop>
   <tabstop>screenshot_edit</tabstop>
   <tabstop>vo_combo</tabstop>
+  <tabstop>vo_user_defined_edit</tabstop>
   <tabstop>ao_combo</tabstop>
+  <tabstop>ao_user_defined_edit</tabstop>
   <tabstop>remember_all_check</tabstop>
   <tabstop>remember_time_check</tabstop>
   <tabstop>close_on_finish_check</tabstop>
